@@ -59,52 +59,5 @@
             <timezone>+1</timezone>
         </developer>
     </developers>
-    <properties>
-        <!-- compiler settings -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.jdk>1.6</maven.jdk>
-        <maven.compiler.debug>true</maven.compiler.debug>
-        <maven.compiler.optimize>false</maven.compiler.optimize>
-        <!-- test settings -->
-        <maven.surefire.forkmode>always</maven.surefire.forkmode>
-    </properties>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>${maven.jdk}</source>
-                    <target>${maven.jdk}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <debug>${maven.compiler.debug}</debug>
-                    <optimize>${maven.compiler.optimize}</optimize>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>    
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <systemProperties>
-                        <property>
-                            <name>log4j.configuration</name>
-                            <value>${log4j.configuration}</value>
-                        </property>
-                    </systemProperties>
-                    <forkMode>${maven.surefire.forkmode}</forkMode>
-                    <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     
 </project>
